[package]
name = "rustpomo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
countdown = "0.1.2"
figlet-rs = "0.1.5"
indicatif = "0.17.7"
soloud = "1.0.5"
